tests/lustre/syntax-errors/type_decl_name.lus


type uint8 = subrange [0, 255] of int;
